--- a/libs/css/style.scss
+++ b/libs/css/style.scss
@@ -104,17 +104,28 @@ footer {
             top: 0px;
         }
     }
-
-    select {
-        width: 100%;
-        background: #FFFFFF;
-        border: 1px solid #E4E7EB;
-        border-radius: 4px;
-        color: #677987;
-        padding: 8px 16px;
-        margin-bottom: 16px;
-        outline: none;
-
+    .select-wrapper{
+        position: relative;
+        select {
+            width: 100%;
+            background: #FFFFFF;
+            border: 1px solid #E4E7EB;
+            border-radius: 4px;
+            color: #677987;
+            padding: 8px 16px;
+            margin-bottom: 16px;
+            outline: none;
+            -moz-appearance:none; /* Firefox */
+            -webkit-appearance:none; /* Safari and Chrome */
+            appearance:none;
+        }
+        &::after{
+            content: url("../images/arrow.svg");
+            position: absolute;
+            right: 20px;
+            top: 8px;
+            transform: scale(1.2);
+        }
         +p {
             color: #52606B;
             font-style: italic;
@@ -126,7 +137,8 @@ footer {
                 font-weight: 600;
             }
         }
-    }
+    }   
+   
 }
 
 .chi-tieu-phan-tich {
@@ -176,8 +188,36 @@ footer {
                 background: #cfcece;
             }
         }
+        .selected{
+            background: #d4f7d0;
+        }
     }
 
+}
+
+
+#repo{
+    margin-bottom: 20px;
+    max-height: 200px;
+    overflow: auto;
+    .item {
+        padding: 8px;
+        color: #52606B;
+        margin-top: 8px;
+        font-weight: 400;
+        font-size: 14px;
+        margin-right: 6px;
+        background: #d4f7d0;
+        border: 1px solid #EFF1F4;
+        border-radius: 4px;
+        display: inline-block;
+        cursor: pointer;
+
+        span {
+            color: #7D8D9A;
+            margin-left: 8px;
+        }
+    }
 }
 
 .quantity {
